--- a/portofolio.html
+++ b/portofolio.html
@@ -15,20 +15,20 @@
 
     <body>
     <header>
-        <div class="container">
-            <nav>
-                <a href="./portofolio.html" class="logo"><span class="web">Web</span>Studio</a>
-                <ul class="navlist list">
-                    <li><a href="./index.html" class="link">Студия</a></li>
-                    <li><a href="./portofolio.html" class="current link">Портфолио</a></li>
-                    <li><a href="" class="link">Контакты</a></li>
-                </ul>
-            </nav>
-            <ul class="list">
-                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+    <div class="container">
+        <nav>
+            <a href="./index.html" class="logo"><span class="web">Web</span>Studio</a>
+            <ul class="nav-list list">
+                <li><a href="./index.html" class="link">Студия</a></li>
+                <li><a href="./portofolio.html" class="link current">Портфолио</a></li>
+                <li><a href="" class="link">Контакты</a></li>
             </ul>
-        </div>
+        </nav>
+        <ul class="list">
+            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+        </ul>
+    </div>
     </header>
 
         <main>
@@ -120,10 +120,10 @@
             <div class="container">
                 <a href="./portofolio.html" class="logo-footer"><span class="web">Web</span>Studio</a>
 
-                <address>г. Киев, пр-т Леси Украинки, 26</address>
+                <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
                 <ul class="list">
-                    <li><a href="info@example.com" class="link">info@example.com</a></li>
-                    <li><a href="tel:+380991111111" class="link">+38 099 111 11 11</a></li>
+                    <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                    <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
                 </ul>
             </div>
         </footer>
