--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <div class="container">
       <nav>
         <a href="./index.html" class="logo"><span class="web">Web</span>Studio</a>
-        <ul class="nav-list list">
+        <ul class="list nav-list">
           <li><a href="./index.html" class="link current">Студия</a></li>
           <li><a href="./portofolio.html" class="link">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="list">
+      <ul class="list aside">
         <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
