--- a/portofolio.html
+++ b/portofolio.html
@@ -18,13 +18,13 @@
     <div class="container">
         <nav>
             <a href="./index.html" class="logo"><span class="web">Web</span>Studio</a>
-            <ul class="nav-list list">
+            <ul class="list nav-list">
                 <li><a href="./index.html" class="link">Студия</a></li>
                 <li><a href="./portofolio.html" class="link current">Портфолио</a></li>
                 <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
-        <ul class="list">
+        <ul class="list aside">
             <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
@@ -46,15 +46,15 @@
                 </div>
          
                 <div class="container">
-                    <ul class="list">
-                        <li class="website">
+                    <ul class="list portfolio">
+                        <li>
                             <img src="./images/portfolio/port1.jpg" 
                             alt="Технокряк" 
                             width="370" />
                             <h2 class="title">Технокряк</h2>
                             <p class="text">Веб-сайт</p>
                         </li>
-                        <li class="styles">
+                        <li>
                             <img src="./images/portfolio/port2.jpg" 
                             alt="Постер New Orlean vs Golden Star" 
                             width="370" />
@@ -73,7 +73,7 @@
                             alt="Проект Prime" 
                             width="370" />
                             <h2 class="title">Проект Prime</h2>
-                            <p class="text">Маркnинг</p>
+                            <p class="text">Маркетинг</p>
                         </li>
                         <li>
                             <img src="./images/portfolio/port5.jpg" 
